--- a/docker/postgres/docker-compose.yml
+++ b/docker/postgres/docker-compose.yml
@@ -29,22 +29,6 @@ services:
       - 5050:80/tcp
 
   #redis
-  #redis:
-  #  image: redis
-  #  container_name: redis
-  #  restart: unless-stopped
-  #  environment:
-      #- REDIS_PASSWORD=qed7691
-  #    - REDIS_PORT=6379
-  #    - REDIS_DATABASES=4
-  #  networks:
-  #    - backbone
-  #  ports:
-  #    - 6379:6379/tcp
-    #command: --requirepass "${REDIS_PASSWORD}"
-  #  volumes:
-  #    - ./data/redis:/data
-
   redis-stack:
     image: redis/redis-stack:latest
     container_name: redis-stack
@@ -58,22 +42,13 @@ services:
     ports:
       - 6379:6379/tcp
       - 8001:8001/tcp
-    #command: --requirepass "qed7691"
+    #command: --requirepass ""
     volumes:
       - ./data/redis:/data
 
-  #elastic search Not implemented yet
+  #elastic Not implemented yet
   
-  #elastic:
-  #  image: elasticsearch:8.12.1
-  #  container_name: elastic
-  #  restart: unless-stopped
-  #  ports:
-  #    - 9200:9200
-  #    - 9300:9300
-  #  environment:
-  #    - discovery.type=single-node
-  #    - xpack.security.enabled=false
+ 
 
 
 networks:
