--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
 .env.backup
 .env.production
 .phpunit.result.cache
@@ -18,4 +17,6 @@ yarn-error.log
 /.vscode
 .editorconfig
 .env.example
-Dockerfile
+docker/postgres/data/redis/dump.rdb
+
+*.rdb
