--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=pg16
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=75?4jHur^gn8u4kt^
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
@@ -25,7 +25,8 @@ SESSION_LIFETIME=120
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_USERNAME=default
+REDIS_PASSWORD=75?4jHur^gn8u4kt^
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
