--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
 REDIS_USERNAME=default
-REDIS_PASSWORD=75?4j**$%&&%$W$T*Hur^gn8u4kt^
+REDIS_PASSWORD=75?4j**$%&&%*Hur^gn8u4kt^
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
