--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=postgres_container
 DB_PORT=5432
 DB_DATABASE=pg16
 DB_USERNAME=postgres
@@ -24,7 +24,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis-stack
 REDIS_USERNAME=default
 REDIS_PASSWORD=75?4j**$%&&%*Hur^gn8u4kt^
 REDIS_PORT=6379
@@ -54,7 +54,7 @@ PUSHER_APP_CLUSTER=mt1
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_PORT="5173"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
