--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,15 +1,25 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name localhost;
     root /var/www/app/public;
-    client_max_body_size 200M;
 
-    index index.php index.html index.htm;
+    client_max_body_size 200M;
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+
+    index index.php;
+    charset utf-8;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
     }
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    error_page 404 /index.php;
 
     location ~ \.php$ {
         try_files $uri = 404;
@@ -19,6 +29,10 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_hide_header X-Powered-By;
+    }
+    location ~ /\.(?!well-known).* {
+        deny all;
     }
 
     error_log  /var/log/nginx/error.log;
