--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:A/7Mes0kk9GIzMT+SrwAeJm88Wv509azuWab8eG8SnA=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://127.0.0.1
 
 LOG_CHANNEL=stack
